make chorecraft more generic
